versioned_docs/version-2.6.0/MatrixOS/Applications/Lighting.mdx
---
sidebar_position: 3
---

import MystrixVisualizer from "@site/src/components/MystrixVisualizer/MystrixVisualizer";
import DocLink from "@site/src/components/DocLink/DocLink";

# Lighting App

The Lighting App transforms your device into a versatile lighting panel that can be used in various environments.

Holding down the function key in the [config menu](#config-menu) will exit this app and bring you back to the <DocLink to="/docs/MatrixOS/ApplicationLauncher">application launcher</DocLink>.

## Lighting View

The Lighting View is the main interface of the Lighting App. It displays the current lighting effect and color.

Clicking the function key will bring you to the [config menu](#config-menu).

## Config Menu

export function ConfigMenu() {

    const uiElements = [
    {
        "name": "Brightness Control",
        "desc": "Tap to cycle through brightness levels. Hold to enter the brightness control menu.",
        "link": "/docs/MatrixOS/SystemSettings#brightness-control",
        "elements": [
            {
                "pos": [3, 3],
                "size": [2, 2],
                "color": "#FFFFFF"
            }
        ]
    },
    {
        "name": "Rotate Device Up",
        "desc": "This technically doesn't do anything.",
        "link": "#device-rotation",
        "elements": [
            {
                "pos": [3, 2],
                "size": [2, 1],
                "color": "#00FF00"
            }
        ]
    },
    {
        "name": "Rotate Device Left",
        "desc": "Rotate the device so that the top of the device is on the left side.",
        "link": "/docs/MatrixOS/SystemSettings#device-rotation",
        "elements": [
            {
                "pos": [2, 3],
                "size": [1, 2],
                "color": "#00FF00"
            }
        ]
    },
    {
        "name": "Rotate Device Down",
        "desc": "Rotate the device so that the top of the device is on the bottom side.",
        "link": "/docs/MatrixOS/SystemSettings#device-rotation",
        "elements": [
            {
                "pos": [3, 5],
                "size": [2, 1],
                "color": "#00FF00"
            }
        ]
    },
    {
        "name": "Rotate Device Right",
        "desc": "Rotate the device so that the top of the device is on the right side.",
        "link": "/docs/MatrixOS/SystemSettings#device-rotation",
        "elements": [
            {
                "pos": [5, 3],
                "size": [1, 2],
                "color": "#00FF00"
            }
        ]
    },
    {
        "name": "RGB Mode",
        "desc": "Switch to RGB mode.",
        "link": "#rgb-mode",
        "elements": [
            {
                "pos": [3, 0],
                "color": "#FF00FF"
            }
        ]
    },
    {
        "name": "Temperature Mode",
        "desc": "Switch to Temperature Mode.",
        "link": "#temperature-mode",
        "elements": [
            {
                "pos": [4, 0],
                "color": "#FFFFFF"
            }
        ]
    },
    {
        "name": "Color Selector",
        "desc": "Change the color of the lighting view (color may vary based on the mode and configuration).",
        "elements": [
            {
                "pos": [0, 6],
                "size": [8, 2],
                "color": "#00FFFF"
            }
        ]
    },
    {
        "name": "Effect & Speed",
        "desc": "Change the effect and speed of the lighting view.",
        "link": "#lighting-effect",
        "elements": [
            {
                "pos": [0, 3],
                "size": [1, 2],
                "color": "#FFFFFF"
            }
        ]
    },
    {
        "name": "Lighting View or Exit App",
        "desc": "Tap to return to the lighting view. Hold to exit the app.",
        "elements": [
            {
                "pos": ["c"]
            }
        ]
    }

];

    const uiName = "Config Menu"
    const uiDescription = "The config menu allows you to modify lighting options."
    return <MystrixVisualizer
    uiName={uiName}
    uiDescription={uiDescription}
    uiElements={uiElements}
    />

}

<ConfigMenu />

## RGB Mode

In RGB mode, you can set the color of the lighting view to any color you want via the <DocLink to="/docs/MatrixOS/SharedUI/ColorPicker">Color Picker</DocLink>.

## Temperature Mode

In Temperature mode, you can set the color of the lighting view to a color that represents a temperature. The color will change based on the temperature you set.

The selector UI is similar to the <DocLink to="/docs/MatrixOS/SharedUI/ColorPicker">Color Picker</DocLink>, but the hue selector is replaced with a temperature selector and there is no saturation selector.

## Lighting Effect

export function LightingEffect() {

    const uiElements = [
        {
            "name": "Effect: Static",
            "desc": "Set the lighting effect to Static (no effect).",
            "elements": [
                {
                    "pos": [2, 0],
                    "color": "#FFFFFF"
                }
            ]
        },
        {
            "name": "Effect: Breath",
            "desc": "Set the lighting effect to Breath.",
            "elements": [
                {
                    "pos": [3, 0],
                    "color": "#C0C0C0"
                }
            ]
        },
        {
            "name": "Effect: Strobe",
            "desc": "Set the lighting effect to Strobe.",
            "elements": [
                {
                    "pos": [4, 0],
                    "color": "#C0C0C0"
                }
            ]
        },
        {
            "name": "Effect: Saw",
            "desc": "Set the lighting effect to Saw.",
            "elements": [
                {
                    "pos": [5, 0],
                    "color": "#C0C0C0"
                }
            ]
        },
        {
            "name": "Speed Control",
            "desc": "Change the speed of the lighting effect.",
            "elements": [
                {
                    "pos": [0, 6],
                    "size": [8, 2],
                    "color": "#C0C0C0"
                },
                {
                    "pos": [0, 7],
                    "color": "#FFFFFF"
                }
            ]
        },
        {
            "name": "Return to Config Menu",
            "desc": "Tap to return to the config menu.",
            "link": "#config-menu",
            "elements": [
                {
                    "pos": ["c"]
                }
            ]
        }
    ];

    const uiName = "Lighting Effect Menu"
    const uiDescription = "The Lighting Effect Menu allows you to modify lighting effect options."
    return <MystrixVisualizer
        uiName={uiName}
        uiDescription={uiDescription}
        uiElements={uiElements}
    />

}

<LightingEffect />
