versioned_docs/version-3.0/MatrixOS/Applications/Lighting.mdx
---
sidebar_position: 3
---

import MystrixVisualizer from "@site/src/components/MystrixVisualizer/MystrixVisualizer";
import DocLink from "@site/src/components/DocLink/DocLink";

# Lighting App

The Lighting App transforms your device into a versatile lighting panel that can be used in various environments.

When you first enter the application, you will see the Lighting View. You can tap the function key to enter the config menu.

Holding down the function key in the [config menu](#config-menu) will exit this app and bring you back to the <DocLink to="/docs/MatrixOS/ApplicationLauncher">application launcher</DocLink>.

## Lighting View

The Lighting View is the main interface of the Lighting App. It displays the current lighting effect and color.

Clicking the function key will bring you to the [config menu](#config-menu).

## Config Menu

export function ConfigMenu() {

    const uiElements = [
    {
        "name": "RGB Mode",
        "desc": "Switch to RGB mode.",
        "link": "#rgb-mode",
        "elements": [
            {
                "pos": [3, 0],
                "color": "#FF00FF"
            }
        ]
    },
    {
        "name": "Temperature Mode",
        "desc": "Switch to Temperature Mode.",
        "link": "#temperature-mode",
        "elements": [
            {
                "pos": [4, 0],
                "color": "#FFFFFF"
            }
        ]
    },
    {
        "name": "Effect & BPM",
        "desc": "Change the effect and BPM of the lighting view.",
        "link": "#lighting-effect",
        "elements": [
            {
                "pos": [0, 3],
                "size": [1, 2],
                "color": "#FFFFFF"
            }
        ]
    },
    {
        "name": "Color Selector",
        "desc": "Change the color of the lighting view (RGB mode) or temperature (Temperature mode).",
        "elements": [
            {
                "pos": [0, 6],
                "size": [8, 2],
                "color": "#00FFFF"
            }
        ]
    },
    {
        "name": "Lighting View or Exit App",
        "desc": "Tap to return to the lighting view. Hold to exit the app.",
        "elements": [
            {
                "pos": ["c"]
            }
        ]
    }

];

    const uiName = "Config Menu"
    const uiDescription = "The config menu allows you to modify lighting options."
    const uiParentLink = "#lighting-view"
    return <MystrixVisualizer
    uiName={uiName}
    uiDescription={uiDescription}
    uiElements={uiElements}
    uiParentLink={uiParentLink}
    />

}

<ConfigMenu />

## RGB Mode

In RGB mode, you can set the color of the lighting view to any color you want via the <DocLink to="/docs/MatrixOS/SharedUI/ColorPicker">Color Picker</DocLink>.

## Temperature Mode

In Temperature mode, you can set the color of the lighting view to a color that represents a temperature. The color will change based on the temperature you set.

The selector UI is similar to the <DocLink to="/docs/MatrixOS/SharedUI/ColorPicker">Color Picker</DocLink>, but the hue selector is replaced with a temperature selector and there is no saturation selector.

## Lighting Effect

export function LightingEffect() {

    const uiElements = [
        {
            "name": "Effect: Static",
            "desc": "Set the lighting effect to Static (no effect).",
            "elements": [
                {
                    "pos": [2, 0],
                    "color": "#FFFFFF"
                }
            ]
        },
        {
            "name": "Effect: Breath",
            "desc": "Set the lighting effect to Breath.",
            "elements": [
                {
                    "pos": [3, 0],
                    "color": "#C0C0C0"
                }
            ]
        },
        {
            "name": "Effect: Strobe",
            "desc": "Set the lighting effect to Strobe.",
            "elements": [
                {
                    "pos": [4, 0],
                    "color": "#C0C0C0"
                }
            ]
        },
        {
            "name": "Effect: Saw",
            "desc": "Set the lighting effect to Saw.",
            "elements": [
                {
                    "pos": [5, 0],
                    "color": "#C0C0C0"
                }
            ]
        },
        {
            "name": "BPM Display & Tapper",
            "desc": "Shows the current BPM value. Tap this display to updated the BPM based on your tapping rhythm.",
            "elements": [
                {
                    "pos": [0, 2],
                    "size": [8, 4],
                    "color": undefined
                },
                {
                    "pos": [0, 2],
                    "size": [3, 1],
                    "color": "#FF00FF"
                },
                {
                    "pos": [1, 3],
                    "size": [1, 3],
                    "color": "#FF00FF"
                },
                {
                    "pos": [3, 2],
                    "size": [1, 4],
                    "color": "#FFFFFF"
                },
                {
                    "pos": [4, 2],
                    "color": "#FFFFFF"
                },
                {
                    "pos": [4, 4],
                    "color": "#FFFFFF"
                },
                {
                    "pos": [5, 2],
                    "size": [1, 4],
                    "color": "#FFFFFF"
                },
                {
                    "pos": [6, 2],
                    "size": [1, 4],
                    "color": "#FF00FF"
                },
                {
                    "pos": [7, 2],
                    "size": [1, 2],
                    "color": "#FF00FF"
                },
            ]
        },
        {
            "name": "Minus 50",
            "desc": "Decrease the BPM by 50.",
            "elements": [
                {
                    "pos": [0, 7],
                    "color": "#FF00FF"
                }
            ]
        },
        {
            "name": "Minus 20",
            "desc": "Decrease the BPM by 20.",
            "elements": [
                {
                    "pos": [1, 7],
                    "color": "#D800D8"
                }
            ]
        },
        {
            "name": "Minus 5",
            "desc": "Decrease the BPM by 5.",
            "elements": [
                {
                    "pos": [2, 7],
                    "color": "#B800B8"
                }
            ]
        },
        {
            "name": "Minus 1",
            "desc": "Decrease the BPM by 1.",
            "elements": [
                {
                    "pos": [3, 7],
                    "color": "#A000A0"
                }
            ]
        },
        {
            "name": "Add 1",
            "desc": "Increase the BPM by 1.",
            "elements": [
                {
                    "pos": [4, 7],
                    "color": "#A000A0"
                }
            ]
        },
        {
            "name": "Add 5",
            "desc": "Increase the BPM by 5.",
            "elements": [
                {
                    "pos": [5, 7],
                    "color": "#B800B8"
                }
            ]
        },
        {
            "name": "Add 20",
            "desc": "Increase the BPM by 20.",
            "elements": [
                {
                    "pos": [6, 7],
                    "color": "#D800D8"
                }
            ]
        },
        {
            "name": "Add 50",
            "desc": "Increase the BPM by 50.",
            "elements": [
                {
                    "pos": [7, 7],
                    "color": "#FF00FF"
                }
            ]
        },
        {
            "name": "Return to Config Menu",
            "desc": "Tap to return to the config menu.",
            "link": "#config-menu",
            "elements": [
                {
                    "pos": ["c"]
                }
            ]
        }
    ];

    const uiName = "Lighting Effect Menu"
    const uiDescription = "The Lighting Effect Menu allows you to modify lighting effect options."
    const uiParentLink = "#config-menu"
    return <MystrixVisualizer
        uiName={uiName}
        uiDescription={uiDescription}
        uiElements={uiElements}
        uiParentLink={uiParentLink}
    />

}

<LightingEffect />
